# UMI_RTX_Basic_Controller

./: Dockerfile  README.md  check_rtx.sh  start_arm_control.sh  start_arm_only.sh  start_juno_arm.sh
ROS_ws/src/ros_interface_umi_rtx/: CMakeLists.txt
ROS_ws/src/ros_interface_umi_rtx/src/: node_arm.cpp
install/: local_setup.sh  setup.sh
install/keyboard_control/lib/keyboard_control/: nodeGripTester  nodeKeyboardControl  nodePositionControl2
install/keyboard_control/share/keyboard_control/: package.sh
install/ros_interface_umi_rtx/lib/ros_interface_umi_rtx/: GUI  nodeArm  nodeSimu
install/ros_interface_umi_rtx/share/ros_interface_umi_rtx/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/yumi_manual_control/lib/yumi_manual_control/: node_manual_arm
install/yumi_manual_control/share/yumi_manual_control/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
ros_control_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_control_ws/install/keyboard_control/lib/keyboard_control/: nodeJointControl  nodePositionControl1
ros_control_ws/install/keyboard_control/share/keyboard_control/: local_setup.sh  package.sh
ros_control_ws/log/: latest_build
ros_control_ws/src/keyboard_control/: CMakeLists.txt
ros_control_ws/src/keyboard_control/src/: command_publisher.cpp  keyboard_control.cpp  keyboard_joint_control.cpp
ros_control_ws/src/yumi_manual_control/: CMakeLists.txt
ros_control_ws/src/yumi_manual_control/src/: node_manual_arm.cpp
umi-rtx/ports/: rtx
(+1 files in other folders)
